# learn-opengl

./: 001-simple-render.py  002-just-window.py  003-hello-triangle.py  004-hello-triangle-colored.py  005-hello-two-triangles.py  006-hello-two-triangles-colored.py  007-uniform-intro.py  008-texture-intro.py  009-texture-color.py  010-texture-quad_fs.py  011-texture-quad_fs-texture-wrapping-sampler.py  012-texture-quad_fs-texture-wrapping-handler.py  013-rotation-texture.py  014-rotation-texture-animation.py  015-rotation-texture-animation-multiple-planes.py  016-rotation-texture-animation-on-vertex.py  017-hello-3d.py  018-hello-3d-animate.py  019-cube-textures.py  020-cube-textures-z-buffer.py  021-cube-textures-more-cubes.py  022-cube-textures-more-cubes-eulers.py  023-cube-textures-more-cubes-eulers-rand-rot.py  024-camera-view.py  025-look-around-camera.py  026-look-around-camera-controls.py  027-walk-around-camera-controls.py  028-walk-around-camera-controls-mouse.py  LICENSE.md  Readme.md  pyproject.toml
