[tool.poetry]
name = "learn-opengl"
version = "0.1.0"
description = ""
authors = ["yevhen <yevhen.krasnokutsky@gmail.com>"]
readme = "README.md"
# packages = [{include = "learn_opengl"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.1.78"
matplotlib = "^3.8.0"
moderngl = "^5.8.2"
moderngl-window = "^2.4.5"
pyrr = "^0.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
